Table users {
  id integer [primary key]
  username text
  role text [note: 'admin , null']
  password text
  active bool
  created_at timestamp
  updated_at timestamp
}

Table hotels {
 id integer [primary key]
 name text
 description text
 address text
 city text
 state text
 country text
 postal_code text
 phone_number text
 email number
 website number
 active bool
 created_at timestamp
 updated_at timestamp
}

Table rooms {
  id integer [primary key]
  hotel_id int
  name text
  type text [note: 'single, double, deluxe'] // Single: One bed for one person, Double: One large bed or two single beds for two people, Deluxe: More spacious, with premium amenities
  price float
  discount float
  active bool
  created_at timestamp
  updated_at timestamp
}

Table room_facilities {
  id integer [primary key]
  room_id int
  values text [note: 'wifi, break_fast']
}

Table booking_hotels {
  id integer [primary key]
  hotel_id int
  user_id int
  status text [note: 'pending_payment, pending_checkin, checked_in, checked_out, cancelled']
  days_qty number
  check_in_at timestamp
  check_out_at timestamp
}


Ref: booking_hotels.hotel_id > hotels.id
Ref: booking_hotels.user_id > users.id
Ref rooms: rooms.hotel_id > hotels.id // n-n
Ref room_facilities: room_facilities.room_id > rooms.id // n-n